Seperate predefined Authority into XML files
Changes:
- Added XSD schema for Authority XML files
- Moved predefined Authority definitions into separate XML files
- Updated AuthorityFactory to stop preloading predefined Authority
- Added new AuthorityFactoryTest unit test

Ref #1765